# Decapsulate-com

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  decapsulate-feed.xml
.github/: FUNDING.yml
docs/: CNAME  decapsulate-mp3.xml  index.html
docs/episodes/1/: index.html
episodes/: 001-pilot-writing-and-mental-health.md  002-future-episode.md
src/: main.rs  pfg.rs
