[package]
name = "decapsulate-com"
version = "0.1.0"
edition = "2021"

[dependencies]
bon = "1.2.1"
color-eyre = "*"
html-node = { version = "0.5.0", features = ["typed"] }
hypertext = "0.5.1"
lazy_static = "1.5.0"
pulldown-cmark = "0.12.0"
rss = { version = "2.0.8", features = ["validation"] }
xml = "0.8.20"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
enum_glob_use = { level = "deny", priority = 1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
