[package]
name = "decapsulate-com"
version = "0.1.0"
edition = "2021"

[dependencies]
bon = "1.2.1"
color-eyre = "*"
hypertext = "0.5.1"
pulldown-cmark = "0.12.0"
rss = { version = "2.0.8", features = ["validation"] }
serde_yaml = "0.9.34"
xml = "0.8.20"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "warn"
enum_glob_use = { level = "deny", priority = 1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
